--- a/.gitignore
+++ b/.gitignore
@@ -134,4 +134,6 @@ app.*.symbols
 
 android/app/google-services.json
 ios/firebase_app_id_file.json
+macos/Runner/GoogleService-Info.plist
 macos/firebase_app_id_file.json
+ios/Runner/GoogleService-Info.plist
